@@ -25,6 +25,8 @@ mesa (8.0~rc2-1) UNRELEASED; urgency=low
     rest.
   * rules: No need to copy nouveau_vieux to the gallium dir, it's
     installed in libgl1-mesa-dri now.
+  * rules: Handle installing r300_dri.so like other gallium drivers,
+    in libgl1-mesa-dri.install.linux.in.
 
   [ Robert Hooker ]
   * Bump libdrm build dep to 2.4.30, x11proto-gl-dev to 1.4.14, and
